--- a/_assets/base.css
+++ b/_assets/base.css
@@ -64,7 +64,7 @@
 progress,sub,sup{vertical-align:baseline}button,hr,input{overflow:visible}html{font-family:sans-serif;line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0} figcaption, menu,article,aside,details,figure,footer,header,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block}audio:not([controls]){display:none;height:0} [hidden],template{display:none}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}svg:not(:root){overflow:hidden}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}figure{margin:1em 40px}hr{box-sizing:content-box;height:0}button,input,optgroup,select,textarea{font:inherit;margin:0}optgroup{font-weight:700}button,input{}button,select{text-transform:none}[type=submit], [type=reset],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-input-placeholder{color:inherit;opacity:.54}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
 
 /* General font and colors */
-html { font-family: Jaldi, sans-serif; font-size: 19px; line-height: 28px; color: #181818; background: #fff; }
+html { font-family: Jaldi, sans-serif; font-size: 19px; line-height: 1.5; color: #181818; background: #fff; }
 
 /* Headlines */
 h1, h2, h3, h4, h5, h6 { font-family: Share, sans-serif; font-weight: 400; line-height: 1.1; margin: 25px 0 10px; }
@@ -84,9 +84,9 @@ a { color: #04AB90; text-decoration: underline; cursor: pointer; }
 figcaption, address, table caption { color: #595959; font-style: italic; font-size: 0.9em; }
 
 /* Code */
-pre, code, kbd, samp, var { font-family: Fira Mono, monospace; font-size: 16px; background: #e7e9ec; color: #000; border-radius: 3px; padding: 2px 3px; white-space: pre-wrap; word-wrap: break-word; border: 1px solid #ced1d4; }
+pre, code, kbd, samp, var { font-family: Fira Mono, monospace; font-size: 0.85em; background: #e7e9ec; color: #000; border-radius: 3px; padding: 2px 3px; white-space: pre-wrap; word-wrap: break-word; border: 1px solid #ced1d4; }
 pre { padding: 15px; overflow: auto; }
-pre code { padding: 0; border: none; background: transparent; }
+pre code { padding: 0; border: none; background: transparent; font-size: 1em; }
 
 /* Block elements */
 img:not(.inline), svg:not(.inline):not(.svg-inline--fa), video:not(.inline), audio:not(.inline), iframe:not(.inline), embed:not(.inline), object:not(.inline) { display: block; width: 100%; } /* Add the inline class to make images inline instead of a block. */
