--- a/_assets/lindoc.css
+++ b/_assets/lindoc.css
@@ -33,6 +33,7 @@ nav.breadcrumbs { flex-grow: 1; order: 2; }
     border-radius: 0 0 2px 2px; overflow: hidden;
     box-shadow: 0 1px 4px -1px rgba(0,0,0,0.3);
     max-height: 200px;
+    overflow-y: auto;
 }
 .results:empty { display: none; }
 .results a { text-decoration: none; display: block; }
