Search current language only

--- a/default.twig
+++ b/default.twig
@@ -47,7 +47,7 @@
             <div class="language">
                 <input type="checkbox" id="language-select">
                 <label for="language-select"><img src="{{ baseUrl }}/assets/flags/{{ pageLanguage }}.png"></label>
-                <div class="language-select-popup">
+                <div class="language-select-popup" data-default-language="{{ defaultLanguage }}">
 {% for lang in languages %}
                     <a href="{{ baseUrl }}/{% if lang != defaultLanguage %}{{ lang }}/{% endif %}{{ _self.mdToHtml(_self.currentUrl(currentFile, languages)) }}"><img src="{{ baseUrl }}/assets/flags/{{ lang }}.png"></a>
 {% endfor %}
