--- a/assets/lindoc.css
+++ b/assets/lindoc.css
@@ -125,15 +125,11 @@ nav.pagination div:last-child { margin-left: 5px; }
 .sidebar p { margin-bottom: 10px; }
 .sidebar pre { padding: 3px 6px; font-size: 14px; margin-bottom: 0; }
 .sidebar hr { margin: 30px 0; }
-.sidebar a.bulletlink {
-    display: block;
-}
-.sidebar a.bulletlink:before {
-    content: "⚫";
-    width: 1.1em;
-    display: inline-block;
-    color: #595959;
-    margin-left: -0.1em;
+.sidebar .bulletlink {
+    display: list-item;
+    list-style: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2 4' width='6' height='8'><circle cx='1' cy='1' r='1' fill='#181818'/></svg>");
+    color: #181818;
+    margin-left: 1em;
 }
 @media screen and (min-width: 1900px) {
     .sidebar { position: absolute; top: 53px; left: 100%; margin: 0 15px 0 25px; width: 350px; }
