Add favicon tag at baseUrl

--- a/default.twig
+++ b/default.twig
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
         {% if metaDescription|default(description) %}<meta name="description" content="{{ metaDescription|default(description) }}">
 {% endif %}
+        <link rel="shortcut icon" type="image/x-icon" href="{{ baseUrl }}/favicon.ico">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share:400|Jaldi:400,700|Fira+Mono:400,700">
         <link rel="stylesheet" href="{{ baseUrl }}/assets/base.css">
         <link rel="stylesheet" href="{{ baseUrl }}/assets/lindoc.css">
